@@ -15,7 +15,6 @@
 import sqlite3
 import os
 import re
-import shutil
 import sys
 from string import Template
 import logging
@@ -242,12 +241,9 @@ class Item(object):
         
         if not samefile(self.path, dest):
             if copy:
-                # copyfile rather than copy will not copy permissions
-                # bits, thus possibly making the copy writable even when
-                # the original is read-only.
-                shutil.copyfile(syspath(self.path), syspath(dest))
+                util.copy(self.path, dest)
             else:
-                shutil.move(syspath(self.path), syspath(dest))
+                util.move(self.path, dest)
             
         # Either copying or moving succeeded, so update the stored path.
         old_path = self.path
@@ -1179,9 +1175,9 @@ class Album(BaseAlbum):
             new_art = self.art_destination(old_art, newdir)
             if new_art != old_art:
                 if copy:
-                    shutil.copy(syspath(old_art), syspath(new_art))
+                    util.copy(old_art, new_art)
                 else:
-                    shutil.move(syspath(old_art), syspath(new_art))
+                    util.move(old_art, new_art)
                 self.artpath = new_art
             if not copy: # Prune old path.
                 util.prune_dirs(os.path.dirname(old_art),
@@ -1236,5 +1232,5 @@ class Album(BaseAlbum):
         # Normal operation.
         if oldart == artdest:
             util.soft_remove(oldart)
-        shutil.copyfile(syspath(path), syspath(artdest))
+        util.copy(path, artdest)
         self.artpath = artdest
